--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot for service Shmig.bar",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "BOT_TOKEN=\"5462089828:AAEGiDMZvgRzreNrJk7nCHdINtncRs7cnzQ\" node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/BtcRelax/shmigbarbot/issues"
   },
-  "homepage": "https://github.com/BtcRelax/shmigbarbot#readme"
+  "homepage": "https://github.com/BtcRelax/shmigbarbot#readme",
+  "dependencies": {
+    "telegraf": "^4.8.5"
+  }
 }
