--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "BOT_TOKEN=\"5462089828:AAEGiDMZvgRzreNrJk7nCHdINtncRs7cnzQ\" node app.js"
+    "start": "BOT_TOKEN=\"5462089828:AAEGiDMZvgRzreNrJk7nCHdINtncRs7cnzQ\" node src/app.js"
   },
   "repository": {
     "type": "git",
