--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "BOT_TOKEN=\"5462089828:AAEGiDMZvgRzreNrJk7nCHdINtncRs7cnzQ\" node src/app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/BtcRelax/shmigbarbot#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "telegraf": "^4.8.5"
   }
 }
