--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "bot": "node src/bot.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/BtcRelax/shmigbarbot#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "node-telegram-bot-api": "^0.61.0",
     "telegraf": "^4.8.5"
   }
 }
