--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bot for service Shmig.bar",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node kunatest.js",
     "start": "node src/app.js",
     "bot": "node src/bot.js"
   },
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/BtcRelax/shmigbarbot#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.1",
     "node-telegram-bot-api": "^0.61.0",
