--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/BtcRelax/shmigbarbot#readme",
   "dependencies": {
+    "axion": "^0.1.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.1",
