--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "node kunatest.js",
-    "start": "node src/app.js",
+    "start": "node app.js",
     "bot": "node src/bot.js"
   },
   "repository": {
@@ -21,7 +21,10 @@
   "dependencies": {
     "axion": "^0.1.0",
     "axios": "^1.3.4",
+    "config": "^3.3.9",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "lightrun": "^1.10.0",
     "mongoose": "^6.9.1",
     "node-telegram-bot-api": "^0.61.0",
     "prompt-sync": "^4.2.0",
